tests/snapshots/sfc/ts/script_setup__defineprops_type_only_with_destructure_defaults.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { mergeDefaults as _mergeDefaults } from 'vue'
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, renderSlot as _renderSlot, normalizeClass as _normalizeClass } from "vue"


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: {
    color: { type: String, required: false, default: "primary" },
    appearance: { type: String, required: false, default: "filled" }
  },
  setup(__props: any) {


return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("span", {
      class: _normalizeClass([__props.color, __props.appearance])
    }, [ _renderSlot(_ctx.$slots, "default") ], 2 /* CLASS */))
}
}

})
