tests/snapshots/sfc/ts/script_setup__generic_component_with_complex_constraint.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent as _defineComponent, type PropType } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, renderSlot as _renderSlot, withModifiers as _withModifiers } from "vue"

import { ref } from 'vue'

export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: {
    initialState: { type: null as unknown as PropType<FormShape>, required: true },
    onSubmit: { type: Function as PropType<(data: FormShape) => void>, required: true }
  },
  setup(__props) {

const formData = ref<FormShape | null>(null)

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("form", {
      onSubmit: _withModifiers(() => {}, ["prevent"])
    }, [ _renderSlot(_ctx.$slots, "default", { data: formData.value }) ], 40 /* PROPS, NEED_HYDRATION */, ["onSubmit"]))
}
}

})
