tests/snapshots/sfc/ts/script_setup__interface_with_async_callback.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent as _defineComponent, type PropType } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"


interface Props {
  onSubmit: (data: FormData) => Promise<void>;
  onError?: (error: Error) => void;
}

export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: {
    onSubmit: { type: Function as PropType<(data: FormData) => Promise<void>>, required: true },
    onError: { type: Function as PropType<(error: Error) => void>, required: false }
  },
  setup(__props) {


return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("form", null, "Submit"))
}
}

})
