tests/snapshots/sfc/ts/script_setup__props_with_arrow_function_types.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent as _defineComponent, type PropType } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: {
    onSuccess: { type: Function as PropType<() => void>, required: true },
    onError: { type: Function as PropType<(error: Error) => void>, required: true },
    transform: { type: Function as PropType<(value: string) => number>, required: true }
  },
  setup(__props) {


return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", null, "Component"))
}
}

})
