tests/snapshots/sfc/ts/script_setup__props_with_readonly_arrays.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent as _defineComponent, type PropType } from 'vue'
import { Fragment as _Fragment, openBlock as _openBlock, createElementBlock as _createElementBlock, renderList as _renderList, toDisplayString as _toDisplayString } from "vue"


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: {
    options: { type: Array as PropType<readonly { value: string | number; label: string }[]>, required: true }
  },
  setup(__props) {


return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("select", null, [ (_openBlock(true), _createElementBlock(_Fragment, null, _renderList(__props.options, (opt) => {
        return (_openBlock(), _createElementBlock("option", {
          key: opt.value,
          value: opt.value
        }, _toDisplayString(opt.label), 9 /* TEXT, PROPS */, ["value"]))
      }), 128 /* KEYED_FRAGMENT */)) ]))
}
}

})
