tests/snapshots/sfc/ts/script_setup__reco_guidanceprogresslapinputbtn_pattern.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString, normalizeClass as _normalizeClass, withModifiers as _withModifiers } from "vue"

import { computed } from 'vue'

interface GuidanceProgressFormInput {
  progressLap: number;
  originalProgressLap: number;
  progressUnit: { value: string };
}
interface Props {
  guidanceProgress: GuidanceProgressFormInput;
  disabled?: boolean;
  readonly?: boolean;
}

export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: {
    guidanceProgress: { type: null, required: true },
    disabled: { type: Boolean, required: false },
    readonly: { type: Boolean, required: false }
  },
  setup(__props: any) {

const props = __props
const lapClass = computed(() => `lap-${props.guidanceProgress.progressLap}`);
const isChangedProgressLap = computed(
  () => props.guidanceProgress.progressLap !== props.guidanceProgress.originalProgressLap
);

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("button", {
      class: _normalizeClass([{ disabled: __props.disabled }, lapClass.value]),
      disabled: __props.disabled,
      onClick: _withModifiers(() => {}, ["prevent"])
    }, _toDisplayString(__props.guidanceProgress.progressUnit.value), 11 /* TEXT, CLASS, PROPS */, ["disabled", "onClick"]))
}
}

})
