tests/snapshots/sfc/ts/script_setup__reco_roundedbtn_pattern.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent as _defineComponent, type PropType } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, renderSlot as _renderSlot } from "vue"


interface Props {
  outlined?: boolean;
  isWide?: boolean;
  mini?: boolean;
  disabled?: boolean;
  on?: Object;
  height?: number | string;
  color?: string;
}

export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: {
    outlined: { type: Boolean as PropType<boolean>, required: false, default: false },
    isWide: { type: Boolean as PropType<boolean>, required: false, default: false },
    mini: { type: Boolean as PropType<boolean>, required: false },
    disabled: { type: Boolean as PropType<boolean>, required: false, default: false },
    on: { type: Object as PropType<Object>, required: false, default: undefined },
    height: { type: [Number, String] as PropType<number | string>, required: false, default: '2rem' },
    color: { type: String as PropType<string>, required: false, default: 'primary' }
  },
  setup(__props) {


return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("button", { disabled: __props.disabled }, [ _renderSlot(_ctx.$slots, "default") ], 8 /* PROPS */, ["disabled"]))
}
}

})
